trunk/Archive2/62/946e35fc25bd5c/output
main.cpp:43:18: error: use of undeclared identifier 'wkt'
    std::cout << wkt(poly) << "\n";
                 ^
1 error generated.
